--- a/services/user-feeds/package.json
+++ b/services/user-feeds/package.json
@@ -7,9 +7,9 @@
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "node dist/main.js",
+    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "npm run build && node dist/main.js"
+    "start": "npm run build && node dist/main.js",
     "start:watch": "npx nest start --watch",
     "start:debug": "npx nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
