--- a/services/user-feeds/package.json
+++ b/services/user-feeds/package.json
@@ -8,7 +8,7 @@
 	"scripts": {
 		"prebuild": "rimraf dist",
 		"build": "nest build",
-		"start": "node dist/main.js"
+		"start": "node dist/main.js",
 		"format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
 		"start:watch": "npx nest start --watch",
 		"start:debug": "npx nest start --debug --watch",
